eks/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank-api-deployment
  labels:
    app: bank-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bank-api
  template:
    metadata:
      labels:
        app:  bank-api
    spec:
      containers:
      - name: bank-api
        image: 235648760886.dkr.ecr.us-east-1.amazonaws.com/bank:latest   
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
