eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: simple-bank-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
  - host: "a54ba6389da0041f1b1fdf1455c599c1-139601314.us-west-2.elb.amazonaws.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: bank-api-service
            port:
              number: 80
  tls:
  - hosts:
    - a54ba6389da0041f1b1fdf1455c599c1-139601314.us-west-2.elb.amazonaws.com
    secretName: bank-api-cert
